--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@
   height: 100%;
   background-image: url('https://media.istockphoto.com/id/1358464345/photo/mare-and-foal.jpg?s=612x612&w=0&k=20&c=K_yKzFMHEWckTpYN-LJMo7jUDdNR5Gndk5ZYSaXnTwI=');
   background-size: cover;
-  background-position: center; 
+  background-position: top; 
   transition: opacity 0.3s ease; 
 }
 .project-background2 {
@@ -167,7 +167,7 @@
   height: 100%;
   background-image: url('https://9to5toys.com/wp-content/uploads/sites/5/2019/03/GameCube-Style-PowerA-Wireless-Controller-for-Nintendo-Switch.jpg');
   background-size: cover;
-  background-position: center; 
+  background-position: top; 
   transition: opacity 0.3s ease; 
 }
 .project-background3 {
